client/my-sites/checkout/checkout-thank-you/domains/style.scss
@import '@automattic/typography/styles/variables';
@import '@wordpress/base-styles/breakpoints';
@import '@wordpress/base-styles/mixins';

.is-section-checkout-thank-you .layout__content {
    padding-right: 0;
    padding-left: 0;
}

.checkout-thank-you__domains {
	.thank-you {
		&__body {
			div {
				min-width: unset;
			}

			.domain-mapping-thank-you__button {
				width: 144px;
			}
		}
		&__container-header {
			width: auto;
			background-color: var( --studio-blue-50 );
			padding: 0 20px;
			text-align: center;
			height: auto;

			img {
				max-width: 260px;
			}

			&-content {
				display: flex;
				flex-direction: column;
				align-items: center;
				padding-top: 30px;
				color: var( --studio-white );

				&-title {
					font-size: 2rem;
				}
			}
		}
	}
}

